# Teach

./: .gitignore  Pipfile  guitest.py  magic.py  pyproject.toml  pysgtest.py  turtletest.py  wxtest.py
